--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -148,8 +148,8 @@
             <a href="#!"
               ><img
                 class="card-img-top"
-                src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg"
-                alt="..."
+                src="{{p.head_image.url}}"
+                alt="{{p}}의 head_image"
             /></a>
             <div class="card-body">
               <h2 class="card-title">{{p.title}}</h2>
