--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -145,12 +145,21 @@
 
           {% for p in post_list %}
           <div class="card mb-4">
+            {% if p.head_image %}
             <a href="#!"
               ><img
                 class="card-img-top"
                 src="{{p.head_image.url}}"
                 alt="{{p}}의 head_image"
             /></a>
+            {% else %}
+            <a href="#!"
+              ><img
+                class="card-img-top"
+                src="https://picsum.photos/seed/{{p.pk}}/800/400"
+                alt="random image"
+            /></a>
+            {% endif %}
             <div class="card-body">
               <h2 class="card-title">{{p.title}}</h2>
               <p class="card-text">{{p.content}}</p>
