--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -161,12 +161,15 @@
             /></a>
             {% endif %}
             <div class="card-body">
-              <h2 class="card-title">{{p.title}}</h2>
-              <p class="card-text">{{p.content}}</p>
+              <h2 class="card-title">{{p.title | upper}}</h2>
+              {% if p.hook_text %}
+              <h5 class="text-muted">{{p.hook_text}}</h5>
+              {% endif %}
+              <p class="card-text">{{p.content | truncatechars:100 }}</p>
               <a class="btn btn-primary" href="{{p.get_absolute_url}}">Read more →</a>
             </div>
             <div class="card-footer">
-              <div class="small text-muted">{{p.created_at}}</div>
+              <div class="small text-muted">{{p.created_at | date:"Y-m-d h:m:s"}}</div>
               <a href="#">작성자</a>
             </div>
           </div>
