--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -23,19 +23,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">ABOUT ME</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">BLOG</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+
         <!-- Page content-->
         <div class="container mt-5">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8" id="main-area">
                     <!-- Post content-->
-                    <article>
+                    <div id="post-area">
                         <!-- Post header-->
                         <header class="mb-4">
                             <!-- Post title-->
@@ -74,9 +75,9 @@
                             </a>
                             {% endif %}
                         </section>
-                    </article>
+                    </div>
                     <!-- Comments section-->
-                    <section class="mb-5">
+                    <div id="comment-area" class="mb-5">
                         <div class="card bg-light">
                             <div class="card-body">
                                 <!-- Comment form-->
@@ -116,7 +117,7 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
+                    </div>
                 </div>
                 <!-- Side widgets-->
                 <div class="col-lg-4">
