--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -29,7 +29,7 @@
             </div>
             <div class="card-footer">
               <div class="small text-muted">{{p.created_at | date:"Y-m-d h:m:s"}}</div>
-              <a href="#">작성자</a>
+              <a href="#">{{p.author | upper}}</a>
             </div>
           </div>
           {% endfor %}
