--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -15,9 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/"
-                >Home <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/blog/">BLOG</a>
@@ -89,8 +87,7 @@
               <div class="col-6">
                 <button
                   type="button"
-                  class="btn btn-outline-dark btn-block btn-sm"
-                >
+                  class="btn btn-outline-dark btn-block btn-sm">
                   <i class="fa-brands fa-google"></i> LogIn with Google
                 </button>
                 <button
