--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,33 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
+          <h2>BLOG
+              {% if category %}
+                - <span class="badge badge-secondary">{{category}}</span>
+              {% endif %}
+          </h2>
           {% if post_list.exists %}
           {% for p in post_list %}
-          <div class="card mb-4">
+          <div class="card mb-4" id="post-{{p.pk}}">
             {% if p.head_image %}
-            <a href="#!"
-              ><img
-                class="card-img-top"
-                src="{{p.head_image.url}}"
-                alt="{{p}}의 head_image"
-            /></a>
+            <a href="#!" ><img class="card-img-top" src="{{p.head_image.url}}" alt="{{p}}의 head_image"/></a>
             {% else %}
-            <a href="#!"
-              ><img
-                class="card-img-top"
-                src="https://picsum.photos/seed/{{p.pk}}/800/400"
-                alt="random image"
-            /></a>
+            <a href="#!"><img class="card-img-top" src="https://picsum.photos/seed/{{p.pk}}/800/400" alt="random image"/></a>
             {% endif %}
             <div class="card-body">
+                {% if p.category %}
+                    <span class="badge badge-secondary float-right">
+                        <a href="{{p.category.get_absolute_url}}">
+                            {{p.category}}
+                        </a>
+                    </span>
+                {% else %}
+                    <span class="badge badge-secondary float-right">
+                        <a href="/blog/category/no_category/">
+                            미분류
+                        </a>
+                    </span>
+                {% endif %}
               <h2 class="card-title">{{p.title | upper}}</h2>
               {% if p.hook_text %}
               <h5 class="text-muted">{{p.hook_text}}</h5>
@@ -37,14 +45,12 @@
           <h5>아직 게시물이 없습니다</h5>
           {% endif %}
 
-          <!-- Pagination-->
+          <!-- Pagination-->a
           <nav aria-label="Pagination">
             <hr class="my-0" />
             <ul class="pagination justify-content-center my-4">
               <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"
-                  >Newer</a
-                >
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a>
               </li>
               <li class="page-item active" aria-current="page">
                 <a class="page-link" href="#!">1</a>
