--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,6 +5,12 @@
               {% if category %}
                 - <span class="badge badge-secondary">{{category}}</span>
               {% endif %}
+              {% if tag %}
+                - <i class="fas fa-tag"></i>
+              <span class="badge badge-secondary">
+                  {{tag}} ({{tag.post_set.count}})
+              </span>
+              {% endif %}
           </h2>
           {% if post_list.exists %}
           {% for p in post_list %}
@@ -33,6 +39,19 @@
               <h5 class="text-muted">{{p.hook_text}}</h5>
               {% endif %}
               <p class="card-text">{{p.content | truncatechars:100 }}</p>
+
+              {% if p.tags.exists %}
+                <i class="fas fa-tag"></i>
+                {% for t in p.tags.iterator %}
+                    <span class="badge badge-pill badge-light">
+                        <a href="{{t.get_absolute_url}}">
+                            {{t}}
+                        </a>
+                    </span>
+                {% endfor %}
+              {% endif %}
+
+                <br></br>
               <a class="btn btn-primary" href="{{p.get_absolute_url}}">Read more →</a>
             </div>
             <div class="card-footer">
