포스트 작성 페이지 만들기

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/67e2221e3b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-
+  {% include 'blog/navbar.html' %}
 
     <div class="container">
       <div class="row">
