--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,15 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
-          <h2>BLOG
+
+        {% if user.is_authenticated %}
+            {% if user.is_superuser or user.is_staff %}
+                <a calss="btn-info float-right" href="/blog/create_post/" role="button">
+                    NewPost
+                </a>
+            {% endif %}
+        {% endif %}
+        <h2>BLOG
               {% if category %}
                 - <span class="badge badge-secondary">{{category}}</span>
               {% endif %}
