--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,6 +21,11 @@
                             <a class="badge bg-secondary text-decoration-none link-light" href="/blog/category/no_category">미분류</a>
                             {% endif %}
                         </header>
+                        {% if user.is_authenticated and user == post.author %}
+                        <a class="btn btn-info float-right" href="/blog/update_post/{{post.pk}}/" role="button">
+                            <i class="fas fa-pen">Edit Post</i>
+                        </a>
+                        {% endif %}
                         <!-- Preview image figure-->
 
                         <figure class="mb-4">
