--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
     Update Post - BLOG
@@ -10,11 +11,11 @@
   <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <table>
-          {{form}}
-          <tr>
-                <th><label for="id_tags">Tags:</label></th>
-                <td><input id="id_tags" type="text" name="tags_str" value="{{tags_str_default}}"></td>
-            </tr>
+          {{form | crispy}}
+          <div id="div_id_tags_str">
+                <label for="id_tags">Tags:</label>
+                <input id="id_tags" type="text" name="tags_str" value="{{tags_str_default}}" class="textinput textInput form-control">
+          </div>
       </table>
       <button type="submit" class="btn btn-primary float-right">Submit</button>
   </form>
