--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,3 +1,5 @@
+   {% load socialaccount %}
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="/">InternetProgramming</a>
@@ -23,38 +25,22 @@
             <li class="nav-item">
               <a class="nav-link" href="/about_me/">ABOUT ME</a>
             </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Dropdown link
-              </a>
-              <div
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
           </ul>
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a
-                href="#"
-                data-toggle="modal"
-                data-target="#loginModal"
-                class="nav-link"
-                >LOGIN</a
-              >
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{user.username}}
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="/accounts/logout/">LogOut</a>
+              </div>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a href="#" data-toggle="modal" data-target="#loginModal" class="nav-link">LOGIN</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
@@ -85,25 +71,22 @@
           <div class="modal-body">
             <div class="row">
               <div class="col-6">
-                <button
-                  type="button"
-                  class="btn btn-outline-dark btn-block btn-sm">
+                <a role="button" class="btn btn-outline-dark btn-block btn-sm"
+                href="{% provider_login_url 'google' %}">
                   <i class="fa-brands fa-google"></i> LogIn with Google
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-outline-dark btn-block btn-sm"
-                >
+                </a>
+                <a
+                  role="button"
+                  class="btn btn-outline-dark btn-block btn-sm" href="/accounts/login/">
                   <i class="fa-solid fa-envelope"></i> LogIn with Email
-                </button>
+                </a>
               </div>
               <div class="col-6">
-                <button
-                  type="button"
-                  class="btn btn-outline-dark btn-block btn-sm"
-                >
+                <a
+                  role="button"
+                  class="btn btn-outline-dark btn-block btn-sm" href="/accounts/signup/">
                   <i class="fa-solid fa-envelope"></i> SignUp with Email
-                </button>
+                </a>
               </div>
             </div>
           </div>
