--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -1,22 +1,41 @@
-<!-- Search widget-->
+          <!-- Search widget-->
           <div class="card mb-4">
             <div class="card-header">
               <i class="fa-solid fa-magnifying-glass"></i> Search
             </div>
             <div class="card-body">
               <div class="input-group">
-                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
+                <input id="search-input" class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
                 <button
                   class="btn btn-primary"
                   id="button-search"
                   type="button"
+                  onclick="searchPost()"
                 >
                   Go!
                 </button>
               </div>
             </div>
           </div>
-          <!-- Categories widget-->
+
+          <script>
+            function searchPost(){
+              let searchValue = document.getElementById('search-input').value.trim();
+              if(searchValue.length > 1){
+                location.href = "/blog/search/" + searchValue + "/";
+              }
+              else{
+                alert('검색어 ('+ searchValue +') 너무 짧아요');
+              }
+            };
+            document.getElementById('search-input').addEventListener('keyup', function(event){
+                if(event.key === 'Enter'){
+                    searchPost();
+                }
+            });
+          </script>
+
+                    <!-- Categories widget-->
           <div class="card mb-4" id="category_card">
             <div class="card-header">Categories</div>
             <div class="card-body">
