아바타 보여주기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -75,7 +75,7 @@
           <h5>아직 게시물이 없습니다</h5>
           {% endif %}
 
-          <!-- Pagination-->a
+          <!-- Pagination-->
           {% if is_paginated %}
           <nav aria-label="Pagination">
             <hr class="my-0" />
